feat: add React frontend, My Profile view, Project Ratings, HR Dashboard access, and hot-reload polling setup